kubernetes/apps/homepage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: homepage
